--- a/index.html
+++ b/index.html
@@ -80,10 +80,7 @@
             <h2>Assista ao trailer</h2>
         </div>
         <div class="iframe__episodes">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/nHMQBg6Zduc?si=eIWygJSdbbqbtES6"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Bbbsa1RKHXw?si=08ATlctuzGd_oiFF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </section>
 
